@@ -1,6 +1,7 @@
 package edu.yu.einstein.wasp.controller.chipseq;
 
 import java.util.ArrayList;
+import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -18,12 +19,17 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 
 import edu.yu.einstein.wasp.controller.JobSubmissionController;
+import edu.yu.einstein.wasp.controller.util.SampleAndSampleDraftMetaHelper;
 import edu.yu.einstein.wasp.dao.JobDraftDao;
 import edu.yu.einstein.wasp.dao.JobDraftMetaDao;
 import edu.yu.einstein.wasp.dao.SampleDraftDao;
+import edu.yu.einstein.wasp.dao.SampleDraftMetaDao;
+import edu.yu.einstein.wasp.exception.MetadataTypeException;
+import edu.yu.einstein.wasp.model.Adaptorset;
 import edu.yu.einstein.wasp.model.JobDraft;
 import edu.yu.einstein.wasp.model.SampleDraft;
 import edu.yu.einstein.wasp.model.SampleDraftMeta;
+import edu.yu.einstein.wasp.util.MetaHelper;
 
 @Controller
 @Transactional
@@ -32,10 +38,10 @@ public class ChipSeqJobSubmissionController extends JobSubmissionController {
 
 	@Autowired
 	protected JobDraftDao jobDraftDao;
-
 	@Autowired
 	protected SampleDraftDao sampleDraftDao;
-	
+	@Autowired
+	protected SampleDraftMetaDao sampleDraftMetaDao;	
 	@Autowired
 	protected JobDraftMetaDao jobDraftMetaDao;
 
@@ -95,18 +101,28 @@ public class ChipSeqJobSubmissionController extends JobSubmissionController {
 		
 		List<SampleDraft> sampleDrafts=sampleDraftDao.getSampleDraftByJobId(jobDraftId);
 		if (sampleDrafts.size() < 2){
-			return nextPage(jobDraft);
+			m.put("noPairingPossible", "true");
+			m.put("jobDraft", jobDraft);
+			m.put("nextPage", nextPage(jobDraft).replaceFirst("redirect:/", ""));
+			m.put("pageFlowMap", getPageFlowMap(jobDraft));
+			return "jobsubmit/chipseqform";
 		}
 
 		List<SampleDraft> inputSampleDrafts = new ArrayList<SampleDraft>();
 		List<SampleDraft> ipSampleDrafts = new ArrayList<SampleDraft>();
 		Map<SampleDraft, Integer> sampleDraftOrganismMap = new HashMap<SampleDraft, Integer>();
+		Map<SampleDraft, String> sampleDraftSpeciesNameMap = new HashMap<SampleDraft, String>();
 		
 		for(SampleDraft sampleDraft : sampleDrafts){
 			boolean foundInputOrIP = false;
 			for(SampleDraftMeta sampleDraftMeta : sampleDraft.getSampleDraftMeta()){
 				if(sampleDraftMeta.getK().endsWith("organism")){
-					sampleDraftOrganismMap.put(sampleDraft, new Integer(sampleDraftMeta.getV()));
+					if(!sampleDraftMeta.getV().equals("0")){//if 0, then species = OTHER
+						Integer genomeId = Integer.valueOf(sampleDraftMeta.getV());
+						sampleDraftOrganismMap.put(sampleDraft, genomeId);
+						String speciesName = genomeService.getOrganismMap().get(genomeId).getName();
+						sampleDraftSpeciesNameMap.put(sampleDraft, speciesName);
+					}
 				}
 				if(sampleDraftMeta.getK().endsWith("inputOrIP")){
 					if(sampleDraftMeta.getV().equals("input")){
@@ -134,9 +150,12 @@ public class ChipSeqJobSubmissionController extends JobSubmissionController {
 			//}
 		}
 		if (ipSampleDrafts.isEmpty() || inputSampleDrafts.isEmpty()){//no pairing is possible
-			return nextPage(jobDraft);
+			m.put("noPairingPossible", "true");	
+			m.put("jobDraft", jobDraft);
+			m.put("nextPage", nextPage(jobDraft).replaceFirst("redirect:/", ""));
+			m.put("pageFlowMap", getPageFlowMap(jobDraft));
+			return "jobsubmit/chipseqform";
 		}
-
 		
 		Set<String> selectedSampleDraftPairStringSet = new HashSet<String>();
 		Set<Map<SampleDraft, SampleDraft>> sampleDraftPairSet = jobDraftService.getSampleDraftPairsByJobDraft(jobDraft);
@@ -158,11 +177,13 @@ public class ChipSeqJobSubmissionController extends JobSubmissionController {
 			System.out.println("Test : " + sampleDraft.getName() + " and Control : "
 				+ testControlMap.get(sampleDraft).getName());
 		}
+		m.put("noPairingPossible", "false");
 		m.put("jobDraft", jobDraft);
 		m.put("samples", sampleDrafts);
 		m.put("inputSamples", inputSampleDrafts);
 		m.put("ipSamples", ipSampleDrafts);
 		m.put("sampleOrganismMap", sampleDraftOrganismMap);
+		m.put("sampleSpeciesNameMap", sampleDraftSpeciesNameMap);
 		m.put("selectedTestControlMap", testControlMap);
 		m.put("selectedSamplePairs", selectedSampleDraftPairStringSet);
 		m.put("pageFlowMap", getPageFlowMap(jobDraft));
@@ -302,9 +323,11 @@ public class ChipSeqJobSubmissionController extends JobSubmissionController {
 		this.confirmContinuedValidityOfSamplePairsAndAdjustAsNeeded(jobDraft);
 		this.confirmContinuedValidityOfReplicatesAndAdjustAsNeeded(jobDraft);
 		
+		String noReplicatesPossible = "false";
+		
 		List<SampleDraft> sampleDrafts=jobDraft.getSampleDraft();//sampleDraftDao.getSampleDraftByJobId(jobDraftId);
 		if (sampleDrafts.size() < 2){//require at least two samples in jobDraft to create any possible replicate set
-			return nextPage(jobDraft);
+			noReplicatesPossible = "true";
 		}
 				
 		//added 6-13-14; get samplePairs list, since for chipSeq's use of IDR for integrative analysis, IP replicates must be paired with an input/control
@@ -331,10 +354,12 @@ public class ChipSeqJobSubmissionController extends JobSubmissionController {
 		for(SampleDraft sampleDraft : sampleDrafts){			
 			for(SampleDraftMeta sampleDraftMeta : sampleDraft.getSampleDraftMeta()){
 				if(sampleDraftMeta.getK().endsWith("organism")){
-					Integer genomeId = Integer.parseInt(sampleDraftMeta.getV());
-					String speciesName = genomeService.getOrganismMap().get(genomeId).getName();
+					Integer genomeId = Integer.valueOf(sampleDraftMeta.getV());
+					if(genomeId != 0){//0 indicates species Other
+						String speciesName = genomeService.getOrganismMap().get(genomeId).getName();
 					//System.out.println("want species------------------------sampleDraft: " + sampleDraft.getName() + "   " + " species: " + speciesName);
-					sampleDraftSpeciesNameMap.put(sampleDraft, speciesName);
+						sampleDraftSpeciesNameMap.put(sampleDraft, speciesName);
+					}
 				}
 				if(sampleDraftMeta.getK().endsWith("inputOrIP")){
 					if(sampleDraftMeta.getV().equals("ip")){
@@ -353,7 +378,7 @@ public class ChipSeqJobSubmissionController extends JobSubmissionController {
 			}
 		}
 		if (testSampleDraftsAlreadyInReplicateSet.isEmpty() && (testSampleDraftsAvailableForReplicateSelection.isEmpty() || testSampleDraftsAvailableForReplicateSelection.size() == 1)){//first time around and either no ipSamples or one ipSample -- unable to make any ip replicates
-			return nextPage(jobDraft);
+			noReplicatesPossible = "true";
 		}
 		
 		//In order to determine the SampleDrafts for the createNew select box (which will be stored in testSampleDraftsForCreateNew)
@@ -390,6 +415,7 @@ public class ChipSeqJobSubmissionController extends JobSubmissionController {
 		m.put("sampleDraftSpeciesNameMap", sampleDraftSpeciesNameMap);
 		m.put("jobDraft", jobDraft);
 		m.put("pageFlowMap", getPageFlowMap(jobDraft));
+		m.put("noReplicatesPossible", noReplicatesPossible);
 		return "jobsubmit/replicates";
 		
 	}
@@ -430,7 +456,7 @@ public class ChipSeqJobSubmissionController extends JobSubmissionController {
     		String replicateSetNumberAsString = completeKey.replaceFirst(paramPrefix, "");//so testSampleDraftIdForExistingReplicateSet__1 is converted to 1
     		Integer replicateSetNumberAsInteger = null;
     		try{
-    			replicateSetNumberAsInteger = Integer.parseInt(replicateSetNumberAsString);
+    			replicateSetNumberAsInteger = Integer.valueOf(replicateSetNumberAsString);
     		}catch(Exception e){
     			waspErrorMessage("wasp.unexpected_error.error");
     			return "redirect:/jobsubmit/chipSeq/replicates/"+jobDraftId+".do";
@@ -456,6 +482,196 @@ public class ChipSeqJobSubmissionController extends JobSubmissionController {
 		SampleDraft sampleDraftToBeRemovedFromExistingReplicateSet = sampleDraftDao.getSampleDraftBySampleDraftId(sampleDraftId);
 		jobDraftService.removeSampleDraftFromReplicates(jobDraft, sampleDraftToBeRemovedFromExistingReplicateSet);
 		return "redirect:/jobsubmit/chipSeq/replicates/"+jobDraftId+".do";
+	}
+	
+	@RequestMapping(value="/chipSeqSpecificSampleReview/{jobDraftId}.do", method=RequestMethod.GET)
+	@PreAuthorize("hasRole('jd-' + #jobDraftId)")
+	public String chipSeqSpecificSampleReview (@PathVariable("jobDraftId") Integer jobDraftId, ModelMap m) {
+		
+		JobDraft jobDraft = jobDraftDao.getJobDraftByJobDraftId(jobDraftId);
+		if (! isJobDraftEditable(jobDraft)){
+			return "redirect:/dashboard.do";
+		}
+		List<SampleDraft> sampleDraftList = new ArrayList<SampleDraft>();
+		Map<SampleDraft, List<String>> sampleDraftErrorListMap = new HashMap<SampleDraft,List<String>>();
+		boolean errorsExist = false;
+		for(SampleDraft sampleDraft : jobDraft.getSampleDraft()){
+			
+				List<SampleDraftMeta> normalizedMeta = new ArrayList<SampleDraftMeta>();
+				try {			
+					normalizedMeta.addAll(SampleAndSampleDraftMetaHelper.templateMetaToSubtypeAndSynchronizeWithMaster(sampleDraft.getSampleSubtype(), sampleDraft.getSampleDraftMeta(), SampleDraftMeta.class));
+				} catch (MetadataTypeException e) {
+					logger.warn("Could not get meta for class 'SampleDraftMeta':" + e.getMessage());
+				}
+				sampleDraft.setSampleDraftMeta(normalizedMeta);
+				sampleDraftList.add(sampleDraft);
+			
+				List<String> errorList = this.checkForInputOrIPOrOrganismError(normalizedMeta);
+				if(!errorList.isEmpty()){
+					errorsExist = true;
+				}
+				sampleDraftErrorListMap.put(sampleDraft, errorList);			
+		}
+		
+		m.addAttribute("jobDraft", jobDraft);
+		m.addAttribute("sampleDraftList", sampleDraftList);
+		m.addAttribute("sampleDraftErrorListMap", sampleDraftErrorListMap);
+		m.addAttribute("errorsExist", errorsExist);
+		m.put("pageFlowMap", getPageFlowMap(jobDraft));
+		m.addAttribute("organisms",  genomeService.getOrganismsPlusOther()); // required for metadata control element (select:${organisms}:name:name)
+		if(errorsExist){waspErrorMessage("chipSeq.chipSeqSpecificSampleReview.error");}
+		return "jobsubmit/chipSeqSpecificSampleReview";
+	}
+	
+	private List<String> checkForInputOrIPOrOrganismError(List<SampleDraftMeta> sampleDraftMetaList){
+		List<String> errorList = new ArrayList<String>();
+		
+		String inputOrIP = "";//should be either ip or input
+		String antibodyTarget = "";//if IP, should not be empty. For input/control, the value is NOT used, so let user do whatever they like
+		String peakType = "";//punctate, broad, mixed, none    (should be "punctate", "broad", or "mixed" if IP; should be "none" if sample is input)
+		String organism = "";//cannot be empty
+		
+		for(SampleDraftMeta sdm : sampleDraftMetaList){
+			if(sdm.getK().contains("inputOrIP")){
+				inputOrIP = sdm.getV();
+			}
+			else if(sdm.getK().contains("antibody")){
+				antibodyTarget = sdm.getV();
+			}
+			else if(sdm.getK().contains("peakType")){
+				peakType = sdm.getV();
+			}
+			else if(sdm.getK().contains("organism")){
+				organism = sdm.getV();
+			}
+		}
+		
+		if(inputOrIP.isEmpty()){
+			errorList.add(messageService.getMessage("chipSeq.ip_input_empty.error"));//IP or Input/Control cannot be empty
+		}
+		if(peakType.isEmpty()){
+			errorList.add(messageService.getMessage("chipSeq.peakType_empty.error"));//Peak Type cannot be empty
+		}
+		if(organism.isEmpty()){
+			errorList.add(messageService.getMessage("chipSeq.organism_empty.error"));//Organism cannot be empty
+		}
+		
+		if(inputOrIP.equals("ip")){
+			if(antibodyTarget.isEmpty()){
+				errorList.add(messageService.getMessage("chipSeq.ip_target_empty.error"));	//Provide CHiP Target for this IP sample			
+			}
+			if(antibodyTarget.trim().toLowerCase().equals("none")){
+				errorList.add(messageService.getMessage("chipSeq.ip_target_none.error"));	//CHiP Target for any IP sample cannot be none
+			}
+			if(peakType.toLowerCase().equals("none")){
+				errorList.add(messageService.getMessage("chipSeq.ip_peakType_none.error"));//Peak Type for any IP sample cannot be none
+			}
+		}
+		else if(inputOrIP.equals("input")){
+			if(!antibodyTarget.isEmpty() && !antibodyTarget.trim().toLowerCase().equals("none")){
+				//decided in the end not to worry about antibodyTarget for an input/control, as the information is, so far, never used
+				//and a user might care to put none, or pre-immune, or whatever, so let them put what they like.
+				///////errorList.add(messageService.getMessage("chipSeq.input_target_not_empty_and_not_none.error"));//CHiP Target for any Input/Control must be blank or none
+			}
+			if(!peakType.toLowerCase().equals("none")){
+				errorList.add(messageService.getMessage("chipSeq.input_peakType_must_be_none.error"));//Peak Type for any Input/Control sample must be none
+			}
+		}
+		
+		return errorList;
+	}
+	
+	@RequestMapping(value="/chipSeqSpecificSampleReview/{jobDraftId}.do", method=RequestMethod.POST)
+	@PreAuthorize("hasRole('jd-' + #jobDraftId)")
+	public String chipSeqSpecificSampleReviewPost (@PathVariable("jobDraftId") Integer jobDraftId, ModelMap m) {
+		
+		JobDraft jobDraft = jobDraftDao.getJobDraftByJobDraftId(jobDraftId);
+		if (! isJobDraftEditable(jobDraft)){
+			return "redirect:/dashboard.do";
+		}
+		
+		String[] sampleIdsAsStringArray = request.getParameterValues("sampleId");
+		int numberOfIncomingRows = sampleIdsAsStringArray.length;
+
+		String[] inputOrIPValues = null;
+		String[] antibodyTargetValues = null;
+		String[] peakTypeValues = null;	
+		String[] organismValues = null;
+		
+		Map<String, String[]> parameterMap = request.getParameterMap();
+		for (String key : parameterMap.keySet()) {
+			if(key.endsWith("inputOrIP")){
+				inputOrIPValues = parameterMap.get(key);
+			}
+			else if(key.endsWith("antibody")){
+				antibodyTargetValues = parameterMap.get(key);
+			}
+			else if(key.endsWith("peakType")){
+				peakTypeValues = parameterMap.get(key);
+			}
+			else if(key.endsWith("organism")){
+				organismValues = parameterMap.get(key);
+			}
+		}
+		
+		List<SampleDraft> sampleDraftList = new ArrayList<SampleDraft>();
+		Map<SampleDraft, List<String>> sampleDraftErrorListMap = new HashMap<SampleDraft,List<String>>();
+		boolean errorsExist = false;
+		
+		int counter = 0;
+		for(String idAsString: sampleIdsAsStringArray){
+			SampleDraft sampleDraft = sampleDraftDao.getSampleDraftBySampleDraftId(Integer.parseInt(idAsString));
+			
+			List<SampleDraftMeta> normalizedMeta = new ArrayList<SampleDraftMeta>();
+			try {			
+				normalizedMeta.addAll(SampleAndSampleDraftMetaHelper.templateMetaToSubtypeAndSynchronizeWithMaster(sampleDraft.getSampleSubtype(), sampleDraft.getSampleDraftMeta(), SampleDraftMeta.class));
+			} catch (MetadataTypeException e) {
+				logger.warn("Could not get meta for class 'SampleDraftMeta':" + e.getMessage());
+			}
+			for(SampleDraftMeta sdm : normalizedMeta){
+				if(sdm.getK().endsWith("inputOrIP")){
+					sdm.setV(inputOrIPValues[counter]);
+				}
+				else if(sdm.getK().endsWith("antibody")){
+					sdm.setV(antibodyTargetValues[counter]);
+				}
+				else if(sdm.getK().endsWith("peakType")){
+					sdm.setV(peakTypeValues[counter]);
+				}
+				else if(sdm.getK().endsWith("organism")){
+					sdm.setV(organismValues[counter]);
+				}
+			}
+			//conscious decision by Rob: save the new meta, even if it has problems. will check below (if errorsExist==true) and return to jobsubmit/chipSeqSpecificSampleReview if errors
+			try{
+				sampleDraftMetaDao.setMeta(normalizedMeta, sampleDraft.getId());//THIS IS A SAVE COMMAND!
+			}
+			catch(Exception e){logger.debug("unable to save sampleMetaList in chipSeqSpecificSampleReviewPost() for sampleDraft: " + sampleDraft.getName() + ". message: " + e.getMessage());}
+			
+			sampleDraft.setSampleDraftMeta(normalizedMeta);			
+			sampleDraftList.add(sampleDraft);
+			
+			List<String> errorList = this.checkForInputOrIPOrOrganismError(normalizedMeta);
+			if(!errorList.isEmpty()){
+				errorsExist = true;
+			}
+			sampleDraftErrorListMap.put(sampleDraft, errorList);
+			
+			counter++;
+		}
+		 
+		if(errorsExist == true){			
+			m.addAttribute("jobDraft", jobDraft);
+			m.addAttribute("sampleDraftList", sampleDraftList);
+			m.addAttribute("sampleDraftErrorListMap", sampleDraftErrorListMap);
+			m.addAttribute("errorsExist", errorsExist);
+			m.put("pageFlowMap", getPageFlowMap(jobDraft));
+			m.addAttribute("organisms",  genomeService.getOrganismsPlusOther()); // required for metadata control element (select:${organisms}:name:name)
+			waspErrorMessage("chipSeq.chipSeqSpecificSampleReview.error");
+			return "jobsubmit/chipSeqSpecificSampleReview";
+		}
+		
+		return nextPage(jobDraft);		
 	}
 }
 
